update async code to handle session with aiohttp

--- a/asynchronous/asynchronous_python35.ipynb
+++ b/asynchronous/asynchronous_python35.ipynb
@@ -228,13 +228,15 @@
     "\n",
     "    print('Starting {}'.format(url))\n",
     "\n",
-    "    response = yield from aiohttp.get(url)\n",
+    "    with aiohttp.ClientSession() as session:\n",
     "\n",
-    "    data = yield from response.text()\n",
+    "        response = yield from session.get(url)\n",
     "\n",
-    "    print('{}: {} bytes: {}'.format(url, len(data), data))\n",
+    "        data = yield from response.text()\n",
     "\n",
-    "    return data\n",
+    "        print('{}: {} bytes: {}'.format(url, len(data), data))\n",
+    "\n",
+    "        return data\n",
     "\n",
     "\n",
     "\n",
@@ -300,14 +302,15 @@
     "async def call_url(url):\n",
     "\n",
     "    print('Starting {}'.format(url))\n",
+    "    async with aiohttp.ClientSession() as session:\n",
     "\n",
-    "    response = await aiohttp.get(url)\n",
+    "        response = await session.get(url)\n",
     "\n",
-    "    data = await response.text()\n",
+    "        data = await response.text()\n",
     "\n",
-    "    print('{}: {} bytes: {}'.format(url, len(data), data))\n",
+    "        print('{}: {} bytes: {}'.format(url, len(data), data))\n",
     "\n",
-    "    return data\n",
+    "        return data\n",
     "\n",
     "\n",
     "\n",
@@ -363,7 +366,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -375,7 +380,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -386,5 +391,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
